# demo

./: .bazelrc  BUILD.bazel  DEPS.bzl  README.md  WORKSPACE  demo.go  go.mod  go.sum
