load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:resolve go github.com/smcheema/demo @com_github_smcheema_demo//:demo
gazelle(
    name = "gazelle",
    prefix = "github.com/smcheema/demo",
)

go_library(
    name = "demo",
    srcs = ["demo.go"],
    importpath = "github.com/smcheema/demo",
    visibility = ["//visibility:public"],
    deps = ["@com_github_smcheema_demo//:demo"],
)
